# clubhouse

./: .codecov.yml  .flake8  .gitignore  FIX_MYPY_GUIDE.md  PROJECT_PLAN.md  README.md  README_CLUBHOUSE.md  REFACTORING_CHECKLIST.md  REPORT.md  TEST_PLAN.md  ai_evolution3.md  ai_revolution2.md  docker-compose-neo4j.yml  docker-compose.yml  fix_agent_demo.py  fix_agent_demo_comprehensive.py  fix_agent_demo_final.py  fix_agent_demo_specific.py  fix_imports.py  fix_long_lines.py  fix_mypy_category.py  fix_mypy_errors.py  fix_remaining_mypy.py  mcp_integration.md  mypy.ini  pyproject.toml  pytest.ini  rename_project.sh  requirements-dev.txt  requirements.txt  run_assistant_tests.sh  run_kafka_demo.sh  run_neo4j_tests.sh  run_tests.sh  setup.py  test_agent_conversation.py  test_schema_conversion.py  toe.md  update_tests.sh
.github/workflows/: ci.yml
agent_orchestration_platform/: README.md  agent_evolution_mcp.md  archetype_framework.md  architecture.md  capabilities.md  cost_management.md  evolutionary_framework.md  human_interaction.md  kafka_implementation.md  mcp_implementation.md  mcp_integration.md  neo4j_implementation.md  openai_agent_implementation.md  openai_agent_integration.md  schema_registry_implementation.md  stoic_evaluation.md
agent_orchestration_platform/architecture/: integrated_evolution_architecture.md
agent_orchestration_platform/archive/: README.md  agent_capabilities.md  agent_implementation.md  agent_personality_framework.md  architecture.md  autonomous_agent_ecosystem.md  collective_unconscious.md  communication_patterns.md  evolutionary_framework.md  feedback_interpretation_framework.md  human_feedback_system.md  human_liaison_agent.md  mcp_tools_integration.md  synthetic_data_generation.md  system_capabilities.md
agent_orchestration_platform_final/: README.md
archive/scripts/: test_agent_cli.py  (+1 more)
clubhouse/: __main__.py  clubhouse_main.py
docker/: Dockerfile  Dockerfile.neo4j-browser  entrypoint.sh
docs/: ARCHITECTURE.md  CAPABILITY_DEVELOPMENT_GUIDE.md  UPDATED_REFACTORING_PLAN.md  ci_cd_workflow.md  clubhouse_architecture.md  configuration_system.md  implementation_checklist.md  schema_registration.md  system_overview.md
mcp_demo/: __main__.py
project_name/: README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_kafka_demo.sh  setup.py
scripts/: agent_cli.py  agent_kafka_cli.py  neo4j_connectivity_check.py  run_clubhouse.py  test_kafka_flow.py  test_llm.py
tests/: conftest.py
(+286 files in other folders)
